--- a/env.yml
+++ b/env.yml
@@ -91,5 +91,6 @@ dependencies:
     - scipy==0.18.1
     - traitlets==4.3.2
     - wcwidth==0.1.7
+    - netcal==1.1.2
 prefix: /h/laleh/anaconda3/envs/f1
 
